--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="flex">
         <div class="kokuban">
           <h1>席替えアプリ</h1>
-          行<input type="number" name="gyou" id="gyou" min="1" max="6" value="1" /> 列<input
+          行<input type="number" name="gyou" id="gyou" min="1" max="6" value="1" />　列<input
             type="number"
             name="retu"
             id="retu"
@@ -20,7 +20,7 @@
             max="3"
             value="1"
           />
-          席数：<span id="total"></span> <br />
+          　席数：<span id="total"></span> <br />
           メンバー：<br />
           <textarea
             name="mebber"
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="flex" id="tables">
-        <div class="table"></div>
+        <div class="table">サンプルさん</div>
       </div>
     </div>
     <script src="index.js"></script>
